# mini-gpt-jax-stories

./: README.md  app.py  config.json  pyproject.toml  requirements.txt
.github/workflows/: ci.yaml
best_model/: _CHECKPOINT_METADATA  _METADATA  _sharding  manifest.ocdbt
best_model/array_metadatas/: process_0
best_model/ocdbt.process_0/: manifest.ocdbt
configs/: base.yaml
noteboooks/: gpt-mini-jax.ipynb
scripts/: generate.py  train.py
src/mingpt_jax/: config.py  data.py  inference.py  model.py  train_utils.py
tests/: test_model.py
